--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,22 +4,37 @@ on:
   push:
     branches:
       - main
+      - prod
 
 jobs:
   deploy:
-    name: Deploy to EC2 on main branch push
+    name: Deploy to EC2 on branch push
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout the files
         uses: actions/checkout@v2
 
-      - name: Executing remote ssh command
+      - name: Deploy to Uat (main)
+        if: github.ref == 'refs/heads/main'
         uses: appleboy/ssh-action@master
         with:
           host: 64.227.138.24
           username: root
           key: ${{ secrets.KEY }}
           script: |
+            echo "Deploying to Uat"
+            whoami
+            bash uat-deploy.sh
+
+      - name: Deploy to prod (prod)
+        if: github.ref == 'refs/heads/prod'
+        uses: appleboy/ssh-action@master
+        with:
+          host: 64.227.138.24
+          username: root
+          key: ${{ secrets.KEY }}
+          script: |
+            echo "Deploying to PRODUCTION"
             whoami
             bash deploy.sh
